--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,25 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-	"name": "Kwitch Dev Container",
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-18-bookworm",
-	"features": {
-		"ghcr.io/devcontainers-extra/features/pnpm:2": {},
-		"ghcr.io/itsmechlark/features/postgresql:1.5.0": {},
-		"ghcr.io/itsmechlark/features/redis-server:1": {},
-		"ghcr.io/devcontainers/features/github-cli:1": {}
-	},
-	"forwardPorts": [3000, 8000, 44444],
-	"postCreateCommand": "bash .devcontainer/init.sh"
-	// "customizations": {},
-	// "remoteUser": "root"
+  "name": "Kwitch Dev Container",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:1-18-bookworm",
+  "features": {
+    "ghcr.io/devcontainers-extra/features/pnpm:2": {},
+    "ghcr.io/itsmechlark/features/postgresql:1.5.0": {},
+    "ghcr.io/itsmechlark/features/redis-server:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {},
+    "ghcr.io/devcontainers-extra/features/nestjs-cli:2": {}
+  },
+  "forwardPorts": [3000, 8000, 44444],
+  "postCreateCommand": "bash .devcontainer/init.sh",
+  "customizations": {
+    "vscode": {
+      "extensions": ["esbenp.prettier-vscode", "humao.rest-client"],
+      "settings": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+      }
+    }
+  }
+  // "remoteUser": "root"
 }
