--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "kwitch",
-  "version": "0.1.0",
   "private": true,
-  "type": "module",
   "packageManager": "pnpm@9.12.2",
   "engines": {
     "node": ">=18"
   },
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev --no-cache --parallel",
+    "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "docker:api": "docker build -t sukjuhong/kwitch-api:latest -f apps/api/Dockerfile .",
-    "docker:web": "docker build -t sukjuhong/kwitch-web:latest -f apps/web/Dockerfile ."
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "license": "MIT",
   "devDependencies": {
