--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kwitch/web",
-  "version": "0.1.0",
+  "packageManager": "pnpm@9.15.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,9 +13,9 @@
     "public"
   ],
   "dependencies": {
-    "@kwitch/ui": "workspace:*",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@kwitch/ui": "workspace:*",
     "axios": "^1.7.2",
     "mediasoup-client": "^3.7.16",
     "next": "^14.2.15",
@@ -23,23 +23,23 @@
     "pretendard": "^1.3.9",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "catalog:react18",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.7.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@kwitch/typescript-config": "workspace:*",
     "@kwitch/types": "workspace:*",
+    "@kwitch/typescript-config": "workspace:*",
+    "@next/eslint-plugin-next": "^14.2.4",
     "@types/node": "catalog:",
     "@types/react": "catalog:react18",
     "@types/react-dom": "catalog:react18",
-    "@next/eslint-plugin-next": "^14.2.4",
-    "tailwindcss": "catalog:",
-    "tailwind-scrollbar": "^3.0.5",
-    "typescript": "catalog:",
-    "eslint": "catalog:",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8"
+    "eslint": "catalog:",
+    "postcss": "^8",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   }
 }
