--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -16,7 +16,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "../../packages/ui/src/components/mode-toggle.tsx"
+    "../../packages/ui/src/components/ui/mode-toggle.tsx",
+    "../../packages/ui/src/components/ui/slider.tsx"
   ],
   "exclude": ["node_modules"]
 }
