--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "kwitch",
   "private": true,
-  "packageManager": "pnpm@9.12.2",
   "engines": {
     "node": ">=18"
   },
+  "packageManager": "pnpm@9.12.2",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -13,13 +13,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@typescript-eslint/parser": "^8.9.0",
-    "eslint": "^8.57.1",
-    "prettier": "^3.3.3",
-    "tsup": "^8.3.5",
-    "turbo": "^2.2.3",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.9.0"
+    "prettier": "3.5.1",
+    "turbo": "2.4.2"
   }
 }
