feat: add ConfigModule

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
   "name": "Kwitch Dev Container",
-  "image": "mcr.microsoft.com/devcontainers/typescript-node:1-18-bookworm",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
   "features": {
     "ghcr.io/devcontainers-extra/features/pnpm:2": {},
     "ghcr.io/itsmechlark/features/postgresql:1.5.0": {},
