--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,18 +25,16 @@
     "@nestjs/passport": "^11.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^11.0.3",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.0.3",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "mediasoup": "^3.14.14",
-    "nestjs-pino": "^4.2.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.13.0",
-    "pino-http": "^10.4.0",
-    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2",
