--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
         "github.copilot",
         "github.copilot-chat",
         "ms-vscode.vscode-typescript-next",
-        "orta.vscode-jest"
+        "orta.vscode-jest",
+        "bradlc.vscode-tailwindcss"
       ],
       "settings": {
         "editor.formatOnSave": true,
