--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,12 +19,12 @@
     "mediasoup-client": "^3.7.16",
     "next": "^14.2.15",
     "next-themes": "^0.2.1",
-    "pretendard": "^1.3.9",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
     "react-hook-form": "catalog:react18",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.7.2",
+    "lucide-react": "catalog:",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -37,7 +37,6 @@
     "autoprefixer": "^10.0.1",
     "eslint": "catalog:",
     "postcss": "^8",
-    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
   }
