feat: implement google login

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -4,6 +4,10 @@ CORS_ORIGIN=
 
 JWT_SECRET=
 
+OAUTH2_GOOGLE_CLIENT_ID=
+OAUTH2_GOOGLE_CLIENT_SECRET=
+OAUTH2_GOOGLE_REDIRECT_URL=
+
 MEDIASOUP_LISTEN_IP=
 MEDIASOUP_ANNOUNCED_IP=
 MEDIASOUP_WEBRTC_SERVER_PORT=
