refactor: next version up & enable eslint

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kwitch/web",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -17,11 +17,11 @@
     "@kwitch/ui": "workspace:*",
     "axios": "^1.7.2",
     "mediasoup-client": "^3.7.16",
-    "next": "^14.2.15",
+    "next": "15.2.0",
     "next-themes": "^0.2.1",
-    "react": "catalog:react18",
-    "react-dom": "catalog:react18",
-    "react-hook-form": "catalog:react18",
+    "react": "catalog:react19",
+    "react-dom": "catalog:react19",
+    "react-hook-form": "^7.54.2",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.7.2",
     "lucide-react": "catalog:",
@@ -30,12 +30,16 @@
   "devDependencies": {
     "@kwitch/types": "workspace:*",
     "@kwitch/typescript-config": "workspace:*",
-    "@next/eslint-plugin-next": "^14.2.4",
+    "@next/eslint-plugin-next": "15.2.0",
     "@types/node": "catalog:",
-    "@types/react": "catalog:react18",
-    "@types/react-dom": "catalog:react18",
+    "@types/react": "catalog:react19",
+    "@types/react-dom": "catalog:react19",
     "autoprefixer": "^10.0.1",
-    "eslint": "catalog:",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.2.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "postcss": "^8",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
