--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,20 +1,24 @@
 packages:
-  - "packages/*"
-  - "apps/*"
-
+  - packages/*
+  - apps/*
 catalog:
   lucide-react: ^0.456.0
   tailwindcss: ^3.4.14
   eslint: ^9.21.0
   prettier: ^3.3.3
   typescript: ^5.6.3
-  "@types/node": ^20
-  "@types/eslint": ^8
-
+  '@types/node': ^20
+  '@types/eslint': ^8
 catalogs:
   react18:
     react: ^18.3.1
     react-dom: ^18.3.1
-    "@types/react": ^18.3.11
-    "@types/react-dom": ^18.3.0
-    react-hook-form: ^7.28.2
+    '@types/react': ^18.3.11
+    '@types/react-dom': ^18.3.0
+  react19:
+    react: ^19.0.0
+    react-dom: ^19.0.0
+    '@types/react': ^19.0.10
+    '@types/react-dom': ^19.0.4
+onlyBuiltDependencies:
+  - '@nestjs/core'
