feat: add dockerfile for api application

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
   - packages/*
   - apps/*
+
 catalog:
   lucide-react: ^0.456.0
   tailwindcss: ^3.4.14
@@ -9,6 +10,7 @@ catalog:
   typescript: ^5.6.3
   '@types/node': ^20
   '@types/eslint': ^8
+
 catalogs:
   react18:
     react: ^18.3.1
@@ -20,5 +22,10 @@ catalogs:
     react-dom: ^19.0.0
     '@types/react': ^19.0.10
     '@types/react-dom': ^19.0.4
+
 onlyBuiltDependencies:
   - '@nestjs/core'
+  - bcrypt
+  - esbuild
+  - mediasoup
+  - sharp
