--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,61 +17,61 @@
   },
   "dependencies": {
     "@kwitch/const": "workspace:*",
-    "@nestjs/common": "^11.0.10",
-    "@nestjs/config": "^4.0.0",
-    "@nestjs/core": "^11.0.10",
-    "@nestjs/graphql": "^13.0.1",
+    "@nestjs/common": "^11.1.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.0",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^11.0.4",
-    "@nestjs/platform-express": "^11.0.10",
-    "@nestjs/platform-socket.io": "^11.0.3",
+    "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.0",
+    "@nestjs/platform-socket.io": "^11.1.0",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
-    "@nestjs/websockets": "^11.0.3",
+    "@nestjs/websockets": "^11.1.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
-    "mediasoup": "^3.14.14",
+    "mediasoup": "^3.15.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "socket.io": "^4.7.2",
+    "pg": "^8.15.6",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
+    "socket.io": "^4.8.1",
     "typeorm": "0.3.20",
     "uuid": "^11.1.0",
-    "zod": "^3.22.4"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@kwitch/types": "workspace:*",
     "@kwitch/typescript-config": "workspace:*",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^11.0.10",
+    "@nestjs/cli": "^10.4.9",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^11.1.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.31",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
